<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<resources>
  <string name="app_name">FreeBarCode</string>
  <string name="app_picker_name">Applications</string>
  <string name="bookmark_picker_name">Bookmarks</string>
  <string name="BarcodeValue">Barcode Value</string>
  <string name="ParentGroup">Parent Group</string>
  <string name="ParentCode">ParentCode</string>
  <string name="SubCord">Sub Cord</string>
  <string name="ItemCord">Item Cord</string>
  <string name="NameofTool">Name of Tool</string>
  <string name="Color">Color </string>
  <string name="Make">Make</string>
  <string name="Size">Size</string>
  <string name="Model">Model</string>
  <string name="Location">Location</string>
  <string name="SerialNo">Serial No.</string>
  <string name="ok"> OK </string>
  <string name="sign_up"> Do you want to sign up? </string>
  <string name ="userName">User Name</string>
  <string name ="password">Password</string>
  <string name ="ServerIP">Server IP</string>
  <string name ="rememberPassword">Remember my password</string>
<string name ="enter">   Enter   </string>
	<string name ="App">Application</string>
	<string name ="RDP_App_Start_Here">RDP Application Start Here</string>
	<string name="warningtxt"></string>
	<string name="sepatechacter">&#8211;</string>
     <string name="run_task">Run</string>
    <string name="task_working">Working (%1$d)...</string>
    <string name="task_loading">Loading...(%1$d)\n%2$s</string>
    <string name="task_starting">Loging to %1$s  </string>
    <string name="task_cancelled">Task is cancelled by user</string>
    <string name="task_completed">Loading is completed with result (%1$s)</string>
    <string name="login">  LOGIN  </string>
    
  <string name="button_add_item">Add Item</string>
  <string name="button_home">Home</string>
  <string name="button_search">Search</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_scan">Scan</string>
  <string name="button_custom_product_search">Custom search</string>
  <string name="button_edit_item">Edit</string>
  <string name="button_done">Done</string>
  <string name="button_email">Send email</string>
  <string name="button_get_directions">Get directions</string>
  <string name="truyentitle">Ten Truyen</string>
  <string name="button_dis_shopper">Tshow</string>
  <string name="button_mms">Send MMS</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Open browser</string>
  <string name="button_product_search">Product Search</string>
  <string name="button_read_book">Browse book</string>
  <string name="button_search_book_contents">Search contents</string>
  <string name="button_share_app">Application</string>
  <string name="button_share_bookmark">Bookmark</string>
  <string name="button_share_by_email">Share via email</string>
  <string name="button_share_by_sms">Share via SMS</string>
  <string name="button_share_clipboard">Clipboard</string>
  <string name="button_share_contact">Contact</string>
  <string name="button_show_map">Show map</string>
  <string name="button_sms">Send SMS</string>
  <string name="button_web_search">Web search</string>
  <string name="button_wifi">Connect to Network</string>
  <string name="contents_contact">Contact info</string>
  <string name="contents_email">Email address</string>
  <string name="contents_location">Geographic coordinates</string>
  <string name="contents_phone">Phone number</string>
  <string name="contents_sms">SMS address</string>
  <string name="contents_text">Plain text</string>
  <string name="history_clear_text">Clear history</string>
  <string name="history_email_title">Barcode Scanner history</string>
  <string name="history_send">Send history</string>
  <string name="history_title">History</string>
  <string name="menu_about">About</string>
  <string name="menu_help">Help</string>
  <string name="menu_history">History</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_share">Share</string>
  <string name="msg_about">The official Android app of the open source ZXing barcode project.</string>
  <string name="msg_buggy">This device has known bugs that cause barcode scanning problems. For more information, visit http://code.google.com/p/zxing/wiki/FrequentlyAskedQuestions</string>
  <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_default_contents">Contents</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>
  <string name="msg_encode_barcode_failed">Could not generate the requested barcode.</string>
  <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
  <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
  <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser. Would you like to try it?</string>
  <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
  <string name="msg_loading_apps">Loading list of applications\u2026</string>
  <string name="msg_not_our_results">You are leaving this application. The search results you will see are not related to this application.</string>
  <string name="msg_redirect">Redirect</string>
  <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
  <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
  <string name="msg_sbc_no_page_returned">No page returned</string>
  <string name="msg_sbc_page">Page</string>
  <string name="msg_sbc_searching_book">Searching book\u2026</string>
  <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
  <string name="msg_sbc_unknown_page">Unknown page</string>
  <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
  <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
  <string name="msg_share_text">Or type some text and press Enter</string>
  <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
  <string name="preferences_actions_title">When a barcode is found\u2026</string>
  <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
  <string name="preferences_bulk_mode_title">Bulk scan mode</string>
  <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
  <string name="preferences_custom_product_search_summary" formatted="false">Use %s as a placeholder for the product ID, and %f for format</string>
  <string name="preferences_custom_product_search_title">Custom search URL</string>
  <string name="preferences_decode_1D_title">1D barcodes</string>
  <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
  <string name="preferences_decode_QR_title">QR Codes</string>
  <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
  <string name="preferences_front_light_title">Use front light</string>
  <string name="preferences_general_title">General settings</string>
  <string name="preferences_name">Settings</string>
  <string name="preferences_play_beep_title">Beep</string>
  <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
  <string name="preferences_remember_duplicates_title">Remember duplicates</string>
  <string name="preferences_reverse_image_summary">Enable on devices with a front camera only</string>
  <string name="preferences_reverse_image_title">Reversed camera image</string>
  <string name="preferences_result_title">Result settings</string>
  <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
  <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
  <string name="preferences_supplemental_title">Retrieve more info</string>
  <string name="preferences_vibrate_title">Vibrate</string>
  <string name="result_address_book">Found contact info</string>
  <string name="result_calendar">Found calendar event</string>
  <string name="result_email_address">Found email address</string>
  <string name="result_geo">Found geographic coordinates</string>
  <string name="result_isbn">Found book</string>
  <string name="result_product">Found product</string>
  <string name="result_sms">Found SMS address</string>
  <string name="result_tel">Found phone number</string>
  <string name="result_text">Found plain text</string>
  <string name="result_uri">Found URL</string>
  <string name="result_wifi">Found WLAN Configuration</string>
  <string name="sbc_name">Google Book Search</string>
  <string name="share_name">Share via barcode</string>
  <string name="title_about">Barcode Scanner v</string>
  <string name="wa_name">WLAN Connection</string>
  <string name="wifi_changing_network">Changing Network</string>
  <string name="wifi_connected">Connected</string>
  <string name="wifi_creating_network">Creating Network</string>
  <string name="wifi_modifying_network">Modifying Network</string>
  <string name="wifi_ssid_missing">Network name missing</string>
  <string name="wifi_type_incorrect">Network type incorrect</string>
  <string name="wifi_connect_failed">Network connection failed</string>
  <string name="wifi_ssid_label">Network Name</string>
  <string name="wifi_type_label">Type</string>
  <string name="zxing_url">http://code.google.com/p/zxing</string>
</resources>
